@@ -9,5 +9,6 @@
     "CREDENTIALS": null,
     "ALLOWED_NETWORKS": [],
     "BANNED_IPS": [],
-    "BANLIMIT": 0
+    "BANLIMIT": 0,
+    "EXTENSIONS": ['yaml', 'conf']
 }
